# kamron

./: .gitignore  asdfg.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
apps/: admin.py  models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_product_description.py  0002_product_description_product_last_price.py
root/: asgi.py  settings.py  urls.py
